@@ -12,6 +12,18 @@
         <long>The memory cache size for playing</long>
       </locale>
     </schema>
+
+    <schema>
+      <key>/schemas/apps/gnome-mplayer/preferences/mixer</key>
+      <applyto>/apps/gnome-mplayer/preferences/mixer</applyto>
+      <owner>gnome-mplayer</owner>
+      <type>string</type>
+      <default></default>
+      <locale name="C">
+        <short>Default mixer to use</short>
+        <long>Default mixer</long>
+      </locale>
+    </schema>
  
     <schema>
       <key>/schemas/apps/gnome-mplayer/preferences/osdlevel</key>
