@@ -1762,29 +1762,30 @@ gdouble get_alsa_volume()
         return vol;
     }
 
-/*
-    snd_mixer_selem_id_malloc(&sid);
-    snd_mixer_selem_id_set_index(sid, 0);
-    snd_mixer_selem_id_set_name(sid, pcm_mix);
+	if (mixer != NULL) {
+		snd_mixer_selem_id_malloc(&sid);
+		snd_mixer_selem_id_set_index(sid, 0);
+		snd_mixer_selem_id_set_name(sid, mixer);
 
-    elem = snd_mixer_find_selem(mhandle, sid);
-    if (!elem) {
-        if (verbose)
-            printf("Unable to find PCM Mixer control, trying Master\n");
-    } else {
-        snd_mixer_selem_get_playback_volume_range(elem, &pmin, &pmax);
-        f_multi = (100 / (float) (pmax - pmin));
-        snd_mixer_selem_get_playback_volume(elem, 0, &get_vol);
-        vol = (gdouble) ((get_vol - pmin) * f_multi);
-        if (verbose) {
-            printf("PCM Range is %li to %li \n", pmin, pmax);
-			printf("PCM Current Volume %li, multiplier = %f\n",get_vol,f_multi);
-            printf("Scaled Volume is %lf\n", vol);
-        }
-        found = TRUE;
-    }
-    snd_mixer_selem_id_free(sid);
-*/
+		elem = snd_mixer_find_selem(mhandle, sid);
+		if (!elem) {
+			if (verbose)
+				printf("Unable to find %s Mixer control, trying Master\n",mixer);
+		} else {
+			snd_mixer_selem_get_playback_volume_range(elem, &pmin, &pmax);
+			f_multi = (100 / (float) (pmax - pmin));
+			snd_mixer_selem_get_playback_volume(elem, 0, &get_vol);
+			vol = (gdouble) ((get_vol - pmin) * f_multi);
+			if (verbose) {
+				printf("%s Range is %li to %li \n", mixer,pmin, pmax);
+				printf("%s Current Volume %li, multiplier = %f\n",mixer,get_vol,f_multi);
+				printf("Scaled Volume is %lf\n", vol);
+			}
+			found = TRUE;
+		}
+		snd_mixer_selem_id_free(sid);
+	}
+
     if (!found) {
         snd_mixer_selem_id_malloc(&sid);
         snd_mixer_selem_id_set_index(sid, 0);
