@@ -1,4 +1,5 @@
 Development
+    Add command line option --mixer and use that for volume control
     Fix problem with preferences not being saved due to missing config directory
     Don't create cover art cache directory when disable fetch is enabled
     Bump autoplay restart from +10% to +20%.
